Squashed commit of the following:
commit a10a07a5a5cc54034006c18502f3308b7a0b7ee9
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Sun Dec 1 23:49:22 2024 +0100

    test: fixing UnreachableBackendTest

commit 5f995b2eca9610edc39cb94a9a2a2a3c0657362c
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Sun Dec 1 23:47:27 2024 +0100

    test: fix MaintenanceModeTest

commit 75cfd276e4f27ea9852cc7e2ef7b9beb53d0bdc7
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Sun Dec 1 17:44:23 2024 +0100

    test: fix ManagersExecutionTest and StuckRequestsTest

commit e0633bacd0d394f925c4d4a668f022c942455f66
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Fri Nov 29 18:24:37 2024 +0100

    refactor: cleanup tests

commit d27050837238526b1f89135092376ebe8b23d25b
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Thu Nov 21 15:44:31 2024 +0100

    feat: invert HttpProxyServer dependency for mapper

     Conflicts:
    	carapace-server/src/test/java/org/carapaceproxy/listeners/ListenerConfigurationTest.java

commit 7e348bbed50c9d3ab14e3b14a63ddf5a798ef8f0
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Thu Nov 21 15:08:02 2024 +0100

    feat: introduce SafeBackendSelector

commit 48b5bf3aff94bb8bcd43d675c85d664ae109a144
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Mon Nov 11 15:45:01 2024 +0100

    chore: cleanup todo comments

commit 2e083423d680ee5b861f80536b972f995869a0f5
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Thu Nov 21 11:55:04 2024 +0100

    feat: add new configurations

    * add `healthmanager.warmupperiod` configuration (default 30s)
    * add `backend.<id>.coldcapacity` configuration (default 10)
    * add tolerance configuration

commit 7c4768ceaa3f370d30a1ceee29a644e529267a70
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Thu Nov 21 13:03:33 2024 +0100

    feat: implement the feature by spreading the backend status

commit dc6f8bd642